# web_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  crud.py  exeptions.py  items_views.py  main.py  pyproject.toml  requirements.txt  test.py
.devcontainer/: Dockerfile  docker-compose.yml
alembic/: env.py
alembic/versions/: 2024_12_06_1349-fca525239ab5_create_products_table.py  2024_12_06_1413-8b8e5cf364b4_create_products_table.py  2024_12_06_1425-72b647715daf_create_posts_table.py  2024_12_10_2232-db1caf7c9046_create_profile_table.py  2025_01_03_1717-8bb397a41323_create_order_table.py  2025_01_05_2233-210a252e9327_create_table_order.py  2025_01_06_1724-1a30def64d24_create_order_product_association_table.py  2025_01_06_1823-aac0ce2a13fc_create_order_product_association_table2.py  2025_01_06_1826-d1fd130c747f_associnatuion_table.py  2025_01_10_1703-5a222dfe9824_querty.py  2025_01_10_1825-b90dd9a9b7c8_querty.py  2025_01_10_1830-4fd37482a540_add_column_count.py  2025_01_11_1811-258ce74c68ed_querty.py  2025_01_24_1512-65d6a57723cd_add_emails_for_users.py  2025_01_24_1549-f3e680afb0f8_add_hash_password.py  2025_02_01_1700-9cb7cc01bfd2_initial.py  2025_02_04_1419-2a493ef0b258_uuid_for_user.py  2025_02_04_1428-b023e4b93269_uuid_for_user.py  (+1 more)
api_v1/products/: crud.py  (+3 more)
blockchain_endpoints/: views.py
blockchains_api/: algorithms.py  bitcoin_api.py  simple_signal.py
chat/: __init__.py  models.py
core/: config.py
crypto_charts/: charts.py
dao/: base.py
telegram_bot/: run.py
users/: auth.py  crud.py  dao.py  deps.py  models.py  schemas.py  utils.py  views.py
(+9 files in other folders)
