[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = "^0.31.1"
pytest = "^8.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
