[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = "^0.31.1"
pytest = "^8.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
black = "^24.10.0"
fastapi-login = "^1.10.3"
websocket-client = "^1.8.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
ccxt = "^4.4.52"
keyboard = "^0.13.5"
winloop = "^0.1.8"
aiohttp = "3.9.5"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
